# origin

1. IDE/Задача 1. Знакомство с Visual Studio 2022/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
10. CMake/Задача 2. Проект посложнее/: CMakeLists.txt  Class_Triangle.cpp  Task_6.3.cpp  Task_6.3.vcxproj  Task_6.3.vcxproj.filters
11. Сборка и подключение библиотек/Задача 5. Иерархия классов в DLL и CMake/: CMakeLists.txt  Figure.cpp  Figure_Client.cpp  Quadrangle.cpp  Quadrangle.h  Triangle.cpp  Triangle.h
2. Структуры и перечесления/Задача 1. Месяцы/: Task_2.1.cpp  Task_2.1.sln  Task_2.1.vcxproj
2. Структуры и перечесления/Задача 2. Счета/: Task_2.2.cpp  Task_2.2.sln  Task_2.2.vcxproj
2. Структуры и перечесления/Задача 3. Вывод структуры/: Task_2.3.cpp  Task_2.3.sln  Task_2.3.vcxproj
3. Классы и объекты/Задача 1. Калькулятор двух чисел/: Task_3.1.cpp  Task_3.1.sln  Task_3.1.vcxproj
3. Классы и объекты/Задача 2. Счётчик/: Task_3.1.vcxproj  Task_3.2.cpp  Task_3.2.sln
4. ООП. Абстракция и инкапсуляция/Задача 1. Адреса/: Task_4.1.cpp  Task_4.1.sln  Task_4.1.vcxproj
4. ООП. Абстракция и инкапсуляция/Задача 2. Сортируем адреса/: Task_4.2.cpp  Task_4.2.sln  Task_4.2.vcxproj
5. ООП наследование и полиморфизм/Задача 1. Фигуры. Количество сторон/: Task_5.1.cpp  Task_5.1.sln  Task_5.1.vcxproj
5. ООП наследование и полиморфизм/Задача 2. Фигуры. Стороны и углы/: Task_5.2.cpp  Task_5.2.sln  Task_5.2.vcxproj
5. ООП наследование и полиморфизм/Задача 3. Фигуры. Методы/: Task_5.3.cpp  Task_5.3.sln  Task_5.3.vcxproj
(+98 files in other folders)
